--- a/main.html
+++ b/main.html
@@ -5,7 +5,7 @@
 <head>
 	<link rel="stylesheet" href="styles.css">
 </head>
-
+<p>Welcome to Accio Jobs!</p>
 <body>
 	<!-- the entire body must be written by student -->
     <script type="text/javascript" src="./script.js">
