--- a/main.html
+++ b/main.html
@@ -5,12 +5,13 @@
 <head>
 	<link rel="stylesheet" href="styles.css">
 </head>
-	
+
 <body>
-	<h2>
-Welcome to Accio Jobs!
-	</h2>
 	<!-- the entire body must be written by student -->
+	<h1>Welcome to Accio Jobs!</h1>
+    <script type="text/javascript" src="./script.js">
+</script>
+
 </body>
 
 </html>
